--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <meta property="og:title" content="Allyana's Foodhouse LLC" />
     <meta property="og:description" content="Your destination for delicious Filipino cuisine" />
     <meta property="og:type" content="website" />
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
 
   <body>
